--- a/index.html
+++ b/index.html
@@ -448,11 +448,11 @@ Trading Post
 <br><br>
 <div class="BodyFont">
 
-Got unlucky and don't like the item you've pulled from Bartholomew's Shop? Post it for sale or trade here! Use this trading post to see all items up for trade from other players. Once you've found an item you want, get in touch with the seller on Discord and then both of you can contact Pete or Jeremy with a confirmation of the trade.
+Got unlucky and don't like the item you've pulled from Bartholomew's Shop? Post it for sale or trade here, at the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeC80ARQ3Kg8YW1mNh1IzUcq9PnTh75Ga3cwuufmSfjgHyDdA/viewform?usp=sf_link">Pete & Jeremy's DnDTime Trading Post</a>! Check out all items up for trade from other players. Once you've found an item you want, get in touch with the seller on Discord and then both of you can contact Pete or Jeremy with a confirmation of the trade.
 
 <br>
 
-You can also edit your post below. Due to limitations in our system, technically anyone can edit any entry. All trades must <b>still</b> be validated by Pete or Jeremy and any editing of a listing which is not your own will not be tolerated.
+You can edit your posting below, however due to limitations with the system, technically anyone can edit any entry. Editing of a listing which is not your own will not be tolerated and may result in a <b>ban</b> from the trading post or Pete & Jeremy's DnDTime altogether.
 
 <br><br>
 
