--- a/index.html
+++ b/index.html
@@ -452,9 +452,9 @@ Trading Post
 
 Got unlucky and don't like the item you've pulled from Bartholomew's Shop? Post it for sale or trade here, at the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeC80ARQ3Kg8YW1mNh1IzUcq9PnTh75Ga3cwuufmSfjgHyDdA/viewform?usp=sf_link">Pete & Jeremy's DnDTime Trading Post</a>! Check out all items up for trade from other players. Once you've found an item you want, get in touch with the seller on Discord and then both of you can contact Pete or Jeremy with a confirmation of the trade.
 
-<br>
+<br><br>
 
-You can edit your posting below, however due to limitations with the system, technically anyone can edit any entry. Editing of a listing which is not your own will not be tolerated and may result in a <b>ban</b> from the trading post or Pete & Jeremy's DnDTime altogether.
+You can edit your posting below, however due to limitations with the current system, technically anyone can edit any entry. Editing of a listing which is not your own will not be tolerated and may result in a <b>ban</b> from the trading post or Pete & Jeremy's DnDTime altogether.
 
 <br><br>
 
