--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ Items on Display this Month
 		Weapon of Warning
 	</th>
     <td>
-		This magic weapon warns you of danger. While the weapon is on your person, you have advantage on initiative rolls. In addition, you and any of your companions within 30 feet of you can't be surprised, except when incapacitated by something other than nonmagical sleep. The weapon magically awakens you and your companions within range if any of you are sleeping naturally when combat begins.
+		Weapon Enchantment. This magic weapon warns you of danger. While the weapon is on your person, you have advantage on initiative rolls. In addition, you and any of your companions within 30 feet of you can't be surprised, except when incapacitated by something other than nonmagical sleep. The weapon magically awakens you and your companions within range if any of you are sleeping naturally when combat begins.
 	</td>
 	<td>
 		600 Bartholomew Bucks
@@ -713,7 +713,7 @@ Items on Display this Month
 		Boots of the Winterlands
 	</th>
     <td>
-		These furred boots are snug and feel quite warm. While you wear them, you gain the following benefits:
+		Requires Attunement. These furred boots are snug and feel quite warm. While you wear them, you gain the following benefits:
 		<br>
 		• You have resistance to cold damage.
 		<br>
@@ -740,7 +740,7 @@ Items on Display this Month
 		Boots of Levitation
 	</th>
     <td>
-		While you wear these boots, you can use an action to cast the levitate spell on yourself at will.
+		Requires Attunement. While you wear these boots, you can use an action to cast the levitate spell on yourself at will.
 	</td>
 	<td>
 		1,200 Bartholomew Bucks
@@ -751,7 +751,7 @@ Items on Display this Month
 		Quaal's Feather Token, Bird
 	</th>
     <td>
-		This tiny object looks like a feather.
+		Consumable. This tiny object looks like a feather.
 		<br>
 		You can use an action to toss the token 5 feet into the air. The token disappears and an enormous, multicolored bird takes its place. The bird has the statistics of a roc, but it obeys your simple commands and can't attack. It can carry up to 500 pounds while flying at its maximum speed (16 miles an hour for a maximum of 144 miles per day. with a one-hour rest for every 3 hours of flying), or 1,000 pounds at half that speed. The bird disappears after flying its maximum distance for a day or if it drops to 0 hit points. You can dismiss the bird as an action.
 	</td>
@@ -764,7 +764,7 @@ Items on Display this Month
 		Sun Blade
 	</th>
     <td>
-		This item appears to be a longsword hilt. While grasping the hilt, you can use a bonus action to cause a blade of pure radiance to spring into existence, or make the blade disappear. While the blade exists, this magic longsword has the finesse property. If you are proficient with shortswords or longswords, you are proficient with the sun blade.
+		Requires Attunement. This item appears to be a longsword hilt. While grasping the hilt, you can use a bonus action to cause a blade of pure radiance to spring into existence, or make the blade disappear. While the blade exists, this magic longsword has the finesse property. If you are proficient with shortswords or longswords, you are proficient with the sun blade.
 		<br>
 		You gain a +2 bonus to attack and damage rolls made with this weapon, which deals radiant damage instead of slashing damage. When you hit an undead with it, that target takes an extra 1d8 radiant damage.
 		<br>
