--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ Player Queue
 <br><br>
 <div class="BodyFont">
 
-Register below for this week's episode of DnDTime.  This queue will be open every week from Monday through Wednesday.  On Thursday, the queue will close and we will contact the top twelve players in the queue who have the highest priorities and confirm their participation in Friday's games.  These players will be contacted via direct message on our Discord Server.  The first game each week will prioritize new players.  Players gain priority for every cumulative hour having watched the stream which is tracked via bot.  Each time a player participates in DnDTime, their priority decreases slightly.
+Register below for this week's episode of DnDTime.  This queue will be open every week from Monday through Wednesday.  On Thursday, the queue will close and we will contact the top twelve players in the queue who have the highest priorities and confirm their participation in Friday's games.  These players will be contacted via direct message on our Discord Server.  The first game each week will prioritize new players.  Players gain priority points for every cumulative hour that they have watched the stream on Twitch.TV which is tracked via our friendly bot, Spectator.  Each time a player participates in DnDTime, their current number of priority points is halved. This makes it accessible for new players to be able to jump into the rotation with relative ease.
 
 <br><br>
 
