--- a/index.html
+++ b/index.html
@@ -125,25 +125,26 @@
 	
 </style>
 
-<body background="/Graphics/Background.jpg" onload="show_div_element('welcome'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">
+<body background="/Graphics/Background.jpg" onload="show_div_element('welcome'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">
 <div style="position:center; overflow-x: hidden; height:100%;">
 
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('trading'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
 	<div class="w3-dropdown-hover w3-hide-small">
       		<button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>     
       		<div class="w3-dropdown-content w3-bar-block w3-card-4">
-			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a>
-			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
-			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
-			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a>
-			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('trading'); hide_div_element('about'); hide_div_element('faq'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">Trading Post</a>
-			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('fanart'); hide_div_element('about'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('trading'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('faq'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">Trading Post</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('trading'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a>
       </div>
     </div>
   </div>
@@ -151,15 +152,16 @@
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('trading'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('faq'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">Trading Post</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('fanart'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('trading'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('faq'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">Trading Post</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('fanart'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('trading'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a>
 </div>
 
 <!-- Title Area & Audio Player -->
@@ -877,7 +879,31 @@ See the "Playing in DnDTime" page of this website.
 </div>
 <br><br>
 </div>
+<div id="fanart" style="margin-right: 7%; margin-left: 7%;">
 
+<div class="HeadFont">
+
+Fan Art
+</div>
+<br><br>
+<div class="BodyFont">
+
+Check out the awesome fanart drawn by members of the DnDTime community!
+
+<br>
+
+If you've drawn something that you want to share, reach out to DM.Jeremy or DM.Pete on the DnDTime discord server!
+
+<br><br>
+
+<div id="flickrembed"></div><script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles&scale=fill&limit=500&skin=alexis&autoplay=true'></script>
+
+</div>
+<br><br>
+</div>
+	
+	
+	
 <!-- End Page Content -->
 
 <!-- Footer -->
