--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ PETE AND JEREMY'S DNDTIME
 
 <!-- Start Page content -->
 
-<div id="welcome" style="margin-right: 7%; margin-left: 7%;">
+<div id="welcome" display: block; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -226,7 +226,7 @@ Since we've started the stream, DnDTime has grown into a real community of playe
 </div>
 <br><br>
 </div>
-<div id="about" style="margin-right: 7%; margin-left: 7%;">
+<div id="about" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -274,7 +274,7 @@ There are getting to be a lot of people interested in playing in DnDtime, and th
 </div>
 <br><br>
 </div>
-<div id="playing" style="margin-right: 7%; margin-left: 7%;">
+<div id="playing" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -392,7 +392,7 @@ In the world of DnDTime death is a mere inconvenience.  If a character dies duri
 </div>
 <br><br>
 </div>
-<div id="queue" style="margin-right: 7%; margin-left: 7%;">
+<div id="queue" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -421,7 +421,7 @@ If the form below does not load correctly for you, try this <a href="https://dri
 </div>
 <br><br>
 </div>
-<div id="roster" style="margin-right: 7%; margin-left: 7%;">
+<div id="roster" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -443,7 +443,7 @@ This roster details every character to ever be played on Pete and Jeremy's DnDTi
 </div>
 <br><br>
 </div>
-<div id="trading" style="margin-right: 7%; margin-left: 7%;">
+<div id="trading" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -465,7 +465,7 @@ Got unlucky and don't like the item you've pulled from Bartholomew's Shop? Post 
 </div>
 <br><br>
 </div>
-<div id="items" style="margin-right: 7%; margin-left: 7%;">
+<div id="items" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -488,7 +488,7 @@ This index details every magical item that has been pulled from Bartholomew's Bi
 </div>
 <br><br>
 </div>
-<div id="shop" style="margin-right: 7%; margin-left: 7%;">
+<div id="shop" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -804,7 +804,7 @@ A large iron door stands, somewhat out of place, against the back wall of Bartho
 </div>
 <br><br>
 </div>
-<div id="faq" style="margin-right: 7%; margin-left: 7%;">
+<div id="faq" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
@@ -879,7 +879,6 @@ See the "Playing in DnDTime" page of this website.
 </div>
 <br><br>
 </div>
-<div id="fanart" style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
