--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@ If you've drawn something that you want to share, reach out to DM.Jeremy or DM.P
 
 <br><br>
 
-<div id="flickrembed"></div><script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles&scale=fill&limit=500&skin=alexis&autoplay=true'></script>
+<div id="flickrembed"></div><script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
 
 </div>
 <br><br>
