--- a/index.html
+++ b/index.html
@@ -879,6 +879,7 @@ See the "Playing in DnDTime" page of this website.
 </div>
 <br><br>
 </div>
+<div id="fanart" display: none; style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
 
