--- a/test.html
+++ b/test.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" type="image/png" href="/graphics/favicon.png">
+<link rel="icon" type="image/png" href="/Graphics/favicon.png">
 <link rel="stylesheet" href="dndtime.css">
 
-<body background="/graphics/background.jpg">
+<body background="/Graphics/Background.jpg">
 <div style="position:center; overflow-x: hidden; height:100%;">
 
 <!-- Navbar -->
