--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@ PETE AND JEREMY'S DNDTIME
 
 <!-- Start Page content -->
 
-<iframe name="dndtime-iframe" src="welcome.html" width="100%" height="100%"></iframe>
+<iframe name="dndtime-iframe" src="welcome.html"></iframe>
 	
 <!-- End Page Content -->
 
