--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@ PETE AND JEREMY'S DNDTIME
 
 <!-- Start Page content -->
 
-<iframe name="dndtime-iframe" src="welcome.html"></iframe>
+<iframe name="dndtime-iframe" src="welcome.html" onload="resizeIframe(this)"></iframe>
 	
 <!-- End Page Content -->
 
@@ -93,6 +93,12 @@ window.onclick = function(event) {
 }
 </script>
 
+<script type="text/javascript">
+  function resizeIframe(iframe) {
+    iframe.height = iframe.contentWindow.document.body.scrollHeight + "px";
+  }
+</script>	
+	
 </div>
 </body>
 </html>
