--- a/test.html
+++ b/test.html
@@ -97,9 +97,9 @@ window.onclick = function(event) {
 </script>
 
 <script type="text/javascript">
-  function resizeIframe(iframe) {
+  function resizeIframe(dndtime-iframe) {
     iframe.height = iframe.contentWindow.document.body.scrollHeight + "px";
-     iframe.contentWindow.document.querySelector("html").style.overflow = "hidden";
+    iframe.contentWindow.document.querySelector("html").style.overflow = "hidden";
   }
 </script>  
 	
