--- a/test.html
+++ b/test.html
@@ -97,7 +97,7 @@ window.onclick = function(event) {
 </script>
 
 <script type="text/javascript">
-  function resizeIframe(dndtime-iframe) {
+  function resizeIframe(iframe) {
     iframe.height = iframe.contentWindow.document.body.scrollHeight + "px";
     iframe.contentWindow.document.querySelector("html").style.overflow = "hidden";
   }
