--- a/welcome.html
+++ b/welcome.html
@@ -12,7 +12,7 @@
 
 <!-- Start Page content -->
 
-<div id="welcome" display: block; style="margin-right: 7%; margin-left: 7%;">
+<div id="welcome">
 
 <div class="HeadFont">
 
