--- a/about.html
+++ b/about.html
@@ -12,26 +12,8 @@
 
 <!-- Start Page content -->
 
-
-<div class="HeadFont">
-
-Welcome to Pete and Jeremy's DnDTime
-
-</div>
-<br><br>
-<div class="BodyFont">
-
-We are a Dungeons and Dragons live stream starring you, the viewer!  We air every Friday at 9:00 PM EST on Twitch.TV.  Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below.  We use Discord as our primary means of communication, so check out the #announcements text channel for updates!
-
-</div>
-<br><hr><br>
+<div id="about">
 	
-	<a href="https://discord.gg/u3sMTvJ"><img src="/Graphics/Discord.png" alt="Join on Discord"></a>
-	<a href="https://www.twitch.tv/dndtime"><img src="/Graphics/TwitchTV.png" alt="Follow on Twitch.TV"></a>
-	<a href="https://app.roll20.net/lfg/listing/77757/pete-and-jeremys-d-and-d-time"><img src="/Graphics/Roll20.png" alt="Join on Roll20"></a>
-	<a href="https://twitter.com/dnd_time"><img src="/Graphics/Twitter.png" alt="Follow on Twitter"></a>
-	
-<br><hr><br>
 <div class="HeadFont">
 
 About Us
