--- a/items.html
+++ b/items.html
@@ -12,7 +12,7 @@
 
 <!-- Start Page content -->
 
-<div id="items" display: none; style="margin-right: 7%; margin-left: 7%;">
+<div id="items">
 
 <div class="HeadFont">
 
