--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@ PETE AND JEREMY'S DNDTIME
 
 <!-- Start Page content -->
 
-<iframe name="dndtime-iframe" src="welcome.html" width="100%" onload="resizeIframe(this)">
+<iframe name="dndtime-iframe" src="welcome.html" width="100%" onload="resizeIframe(this)" frameBorder="0">
 
 
 </iframe>
