--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/png" href="/Graphics/favicon.png">
 <link rel="stylesheet" href="dndtime.css">
 
-<body background=transparent;>
+<body background-color: rgba(0,0,0,0.0)>
 <div style="position:center; overflow-x: hidden; height:100%;">
 
 <!-- Start Page content -->
