--- a/fanart.html
+++ b/fanart.html
@@ -30,7 +30,8 @@ If you've drawn something that you want to share, reach out to DM.Jeremy or DM.P
 
 <br><br>
 
-<script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
+<script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles_nested&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
+
 </div>
 <br><br>
 </div>
