--- a/ajaxtest.html
+++ b/ajaxtest.html
@@ -16,7 +16,7 @@ function loadDoc() {
       document.getElementById("demo").innerHTML = this.responseText;
     }
   };
-  xhttp.open("GET", "test.html", true);
+  xhttp.open("GET", "test.txt", true);
   xhttp.send();
 }
 </script>
