--- a/index_v2.html
+++ b/index_v2.html
@@ -11,7 +11,7 @@
     <link href="dndtime.css" rel="stylesheet">
 </head>
 
-<body onload="loadWelcome()">
+<body onload="loadContent()">
     <div style="margin: auto; overflow-x: hidden; height:100%;">
         <!-- Navbar -->
         <div class="w3-top">
