--- a/index_v2.html
+++ b/index_v2.html
@@ -92,6 +92,9 @@
                 };
                 xhttp.open("GET", dynamicContent + ".txt", true);
                 xhttp.send();
+                	catch(err) {
+						xhttp.open("GET", "welcome.txt", true);
+					}
             }
         </script>
     </div>
