--- a/index_v2.html
+++ b/index_v2.html
@@ -17,33 +17,33 @@
         <div class="w3-top">
             <div class="w3-bar w3-black w3-card">
                 <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-                <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#welcome">Welcome</a>
-                <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#signups">Sign Up To Play</a>
-                <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#shop">Bartholomew's Shop</a>
+                <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="loadContent();">Welcome</a>
+                <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="loadContent();">Sign Up To Play</a>
+                <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="loadContent();">Bartholomew's Shop</a>
                 <div class="w3-dropdown-hover w3-hide-small">
                     <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="loadContent();" href="#about">About the Stream</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="loadContent();" href="#playing">Playing in DnDTime</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="loadContent();" href="#fanart">Fan Art</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="loadContent();" href="#roster">Hero Roster</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="loadContent();" href="#items">Bartholomew's Guide to all Things Arcane</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="loadContent();" href="#faq">Frequently Asked Questions</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#about" onclick="loadContent();" >About the Stream</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#playing" onclick="loadContent();">Playing in DnDTime</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#fanart" onclick="loadContent();">Fan Art</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#roster" onclick="loadContent();">Hero Roster</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#items" onclick="loadContent();">Bartholomew's Guide to all Things Arcane</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#faq" onclick="loadContent();">Frequently Asked Questions</a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Navbar on small screens -->
         <div class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" id="navDemo" style="margin-top:46px">
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#welcome">Welcome</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#signups">Sign Up To Play</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#shop">Bartholomew's Shop</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#about">About the Stream</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#playing">Playing in DnDTime</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#fanart">Fan Art</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#roster">Hero Roster</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#items">Bartholomew's Guide to all Things Arcane</a>
-            <a class="w3-bar-item w3-button w3-padding-large" onclick="loadContent();" href="#faq">Frequently Asked Questions</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="loadContent();" >Welcome</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="loadContent();" >Sign Up To Play</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="loadContent();">Bartholomew's Shop</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="loadContent();">About the Stream</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="loadContent();">Playing in DnDTime</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#fanart" onclick="loadContent();">Fan Art</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#roster" onclick="loadContent();">Hero Roster</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="loadContent();">Bartholomew's Guide to all Things Arcane</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="loadContent();">Frequently Asked Questions</a>
         </div>
         <!-- Title Area & Audio Player -->
         <br>
