--- a/index_v2.html
+++ b/index_v2.html
@@ -84,6 +84,7 @@
                 }
                 // Load Content
             function loadContent() {
+				setTimeout(100)
                 var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
