--- a/index_v2.html
+++ b/index_v2.html
@@ -11,40 +11,40 @@
     <link href="dndtime.css" rel="stylesheet">
 </head>
 
-<body onload="loadContent()">
+<body onload="setTimeout(loadContent, 200)">
     <span id="welcome"></span><span id="about"></span><span id="fanart"></span><span id="faq"></span><span id="items"></span><span id="playing"></span><span id="signups"></span><span id="roster"></span><span id="shop"></span>
     <div style="margin: auto; overflow-x: hidden; height:100%;">
         <!-- Navbar -->
         <div class="w3-top">
             <div class="w3-bar w3-black w3-card">
                 <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-                <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="loadContent();">Welcome</a>
-                <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="loadContent();">Sign Up To Play</a>
-                <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="loadContent();">Bartholomew's Shop</a>
+                <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a>
+                <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
+                <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
                 <div class="w3-dropdown-hover w3-hide-small">
                     <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#about" onclick="loadContent();" >About the Stream</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#playing" onclick="loadContent();">Playing in DnDTime</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#fanart" onclick="loadContent();">Fan Art</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#roster" onclick="loadContent();">Hero Roster</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#items" onclick="loadContent();">Bartholomew's Guide to all Things Arcane</a>
-                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#faq" onclick="loadContent();">Frequently Asked Questions</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#about" onclick="setTimeout(loadContent, 200);">About the Stream</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#roster" onclick="setTimeout(loadContent, 200);">Hero Roster</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#items" onclick="setTimeout(loadContent, 200);">Bartholomew's Guide to all Things Arcane</a>
+                        <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Navbar on small screens -->
         <div class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" id="navDemo" style="margin-top:46px">
-            <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="loadContent();" >Welcome</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="loadContent();" >Sign Up To Play</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="loadContent();">Bartholomew's Shop</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="loadContent();">About the Stream</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="loadContent();">Playing in DnDTime</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#fanart" onclick="loadContent();">Fan Art</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#roster" onclick="loadContent();">Hero Roster</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="loadContent();">Bartholomew's Guide to all Things Arcane</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="loadContent();">Frequently Asked Questions</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);" >Welcome</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);" >Sign Up To Play</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="setTimeout(loadContent, 200);">About the Stream</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#roster" onclick="setTimeout(loadContent, 200);">Hero Roster</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#items" onclick="setTimeout(loadContent, 200);">Bartholomew's Guide to all Things Arcane</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
         </div>
         <!-- Title Area & Audio Player -->
         <br>
@@ -64,7 +64,7 @@
         <p id="DnDTimeAjaxObject">Only AJAX-supported browsers are supported.</p>
         <!-- End Page Content -->
         <!-- Footer -->
-        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-large"></footer>
+        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-small"></footer>
         <script>
             // Used to toggle the menu on small screens when clicking on the menu button
             function myFunction() {
@@ -82,9 +82,8 @@
                         modal.style.display = "none";
                     }
                 }
-                // Load Content
-            function loadContent() {
-				setTimeout(100)
+            // Load Content
+			function setTimeout(loadContent, 200) {
                 var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
