--- a/index_v2.html
+++ b/index_v2.html
@@ -83,7 +83,7 @@
                     }
                 }
             // Load Content
-			function setTimeout(loadContent, 3000) {
+			function loadContent() {
                 var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
