--- a/index_v2.html
+++ b/index_v2.html
@@ -11,7 +11,7 @@
     <link href="dndtime.css" rel="stylesheet">
 </head>
 
-<body onload="setTimeout(loadWelcome)">
+<body onload="loadWelcome()">
     <span id="welcome"></span><span id="about"></span><span id="fanart"></span><span id="faq"></span><span id="items"></span><span id="playing"></span><span id="signups"></span><span id="roster"></span><span id="shop"></span>
     <div style="margin: auto; overflow-x: hidden; height:100%;">
         <!-- Navbar -->
