--- a/index_v2.html
+++ b/index_v2.html
@@ -107,6 +107,7 @@
                 xhttp.send();
             }
         </script>
+	<script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles_nested&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
     </div>
 </body>
 
