--- a/index_v2.html
+++ b/index_v2.html
@@ -36,8 +36,8 @@
         </div>
         <!-- Navbar on small screens -->
         <div class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" id="navDemo" style="margin-top:46px">
-            <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);" >Welcome</a>
-            <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);" >Sign Up To Play</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a>
+            <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
             <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
             <a class="w3-bar-item w3-button w3-padding-large" href="#about" onclick="setTimeout(loadContent, 200);">About the Stream</a>
             <a class="w3-bar-item w3-button w3-padding-large" href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a>
@@ -61,7 +61,62 @@
         <br>
         <br>
         <!-- Start Page content -->
-        <p id="DnDTimeAjaxObject">Only AJAX-supported browsers are supported.</p>
+        <p id="DnDTimeAjaxObject">
+            <div id="welcome" display: block; style="margin-right: 7%; margin-left: 7%;">
+
+                <div class="HeadFont">
+
+                    Welcome to Pete and Jeremy's DnDTime
+
+                </div>
+                <br>
+                <br>
+                <div class="BodyFont">
+
+                    We are a Dungeons and Dragons live stream starring you, the viewer! We air every Friday at 9:00 PM EST on Twitch.TV. Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below. We use Discord as our primary means of communication, so check out the #announcements text channel for updates!
+
+                </div>
+                <br>
+                <hr>
+                <br>
+
+                <a href="https://discord.gg/u3sMTvJ"><img src="/Graphics/Discord.png" alt="Join on Discord"></a>
+                <a href="https://www.twitch.tv/dndtime"><img src="/Graphics/TwitchTV.png" alt="Follow on Twitch.TV"></a>
+                <a href="https://app.roll20.net/lfg/listing/77757/pete-and-jeremys-d-and-d-time"><img src="/Graphics/Roll20.png" alt="Join on Roll20"></a>
+                <a href="https://twitter.com/dnd_time"><img src="/Graphics/Twitter.png" alt="Follow on Twitter"></a>
+
+                <br>
+                <hr>
+                <br>
+                <div class="HeadFont">
+
+                    About Us
+
+                </div>
+                <br>
+                <br>
+                <div class="BodyFont">
+
+                    Pete and Jeremy are two average guys who love table top RPGs, like Dungeons & Dragons. We see tabletop role playing games as a unique medium to explore the process of collaborative storytelling. We created this show, Pete and Jeremy's DnDTime, because we wanted to share our love for Dungeons & Dragons with our viewers and directly engage them in the storytelling process in a way that conventional live-streams can't.
+
+                    <br>
+                    <br>
+                    <hr>
+                    <br> Conventional Dungeons & Dragons live-streams are long-form campaigns with a consistent cast of characters and long-term overarching plots.
+
+                    <br>
+                    <br> DnDTime is not. Instead, it is made up of three, unrelated, one-hour-long adventures with a cast of players drawn from our audience. This unique format allows for an unorthodox style of play that promotes creativity, improvisation, and a diverse cast of characters. The rapidly changing cast and lack of continuity keeps things fresh and allows us to take greater narrative risks in our storytelling.
+
+                    <br>
+                    <br>
+                    <hr>
+                    <br> Since we've started the stream, DnDTime has grown into a real community of players and Dungeon Masters who all share a love for Dungeons and Dragons. We're a friendly and open community, and we sincerely hope that you'll think about being a part of it.
+
+                </div>
+                <br>
+                <br>
+            </div>
+        </p>
         <!-- End Page Content -->
         <!-- Footer -->
         <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-small"></footer>
@@ -82,8 +137,8 @@
                         modal.style.display = "none";
                     }
                 }
-            // Load Content
-			function loadContent() {
+                // Load Content
+            function loadContent() {
                 var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
@@ -94,8 +149,8 @@
                 xhttp.open("GET", "Welcome.txt", true);
                 xhttp.send();
             }
-			// Load Content
-			function loadContent() {
+            // Load Content
+            function loadContent() {
                 var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
@@ -107,9 +162,9 @@
                 xhttp.send();
             }
         </script>
-	<script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles_nested&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
-	<script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
-</div>
+        <script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles_nested&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
+        <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+    </div>
 </body>
 
 </html>
