--- a/index_v2.html
+++ b/index_v2.html
@@ -9,6 +9,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/Graphics/favicon.png" rel="icon" type="image/png">
     <link href="dndtime.css" rel="stylesheet">
+    <script src="https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles_nested&scale=fit&limit=500&skin=alexis&autoplay=true"></script>
+    <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
 </head>
 
 <body onload="loadWelcome()">
@@ -162,8 +164,6 @@
                 xhttp.send();
             }
         </script>
-        <script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=72157693585268365&sort=2&by=album&theme=tiles_nested&scale=fit&limit=500&skin=alexis&autoplay=true'></script>
-        <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
     </div>
 </body>
 
