--- a/index_v2.html
+++ b/index_v2.html
@@ -63,7 +63,7 @@
         <br>
         <br>
         <!-- Start Page content -->
-        <p id="DnDTimeAjaxObject">
+        <div id="DnDTimeAjaxObject">
             <div id="welcome" display: block; style="margin-right: 7%; margin-left: 7%;">
 
                 <div class="HeadFont">
@@ -118,7 +118,7 @@
                 <br>
                 <br>
             </div>
-        </p>
+        </div>
         <!-- End Page Content -->
         <!-- Footer -->
         <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-small"></footer>
