--- a/index_v2.html
+++ b/index_v2.html
@@ -13,7 +13,7 @@
     <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
 </head>
 
-<body onload="loadWelcome()">
+<body onload="loadContent()">
     <span id="welcome"></span><span id="about"></span><span id="fanart"></span><span id="faq"></span><span id="items"></span><span id="playing"></span><span id="signups"></span><span id="roster"></span><span id="shop"></span>
     <div style="margin: auto; overflow-x: hidden; height:100%;">
         <!-- Navbar -->
@@ -139,18 +139,6 @@
                         modal.style.display = "none";
                     }
                 }
-                // Load Content
-            function loadContent() {
-                var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
-                var xhttp = new XMLHttpRequest();
-                xhttp.onreadystatechange = function() {
-                    if (this.readyState == 4 && this.status == 200) {
-                        document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
-                    }
-                };
-                xhttp.open("GET", "Welcome.txt", true);
-                xhttp.send();
-            }
             // Load Content
             function loadContent() {
                 var dynamicContent = location.hash.substr(1); // Give the URL parameter a variable name
