--- a/index_v2.html
+++ b/index_v2.html
@@ -146,8 +146,7 @@
                         document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
                     }
                 };
-                xhttp.open("GET", dynamicContent + ".txt", true);
-                xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                xhttp.open("POST", dynamicContent + ".txt", true);
                 xhttp.send();
             }
         </script>
