--- a/index_v2.html
+++ b/index_v2.html
@@ -146,7 +146,7 @@
                         document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
                     }
                 };
-                xhttp.open("POST", dynamicContent + ".txt", true);
+                xhttp.open("GET", dynamicContent + ".txt", true);
                 xhttp.send();
             }
         </script>
