--- a/index_v2.html
+++ b/index_v2.html
@@ -131,7 +131,7 @@
                     document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
                 }
             };
-            xhttp.open("GET", dynamicContent + ".txt", true);
+            xhttp.open("GET", dynamicContent + ".html", true);
             xhttp.send();
         }
       </script>
