--- a/index_v2.html
+++ b/index_v2.html
@@ -63,7 +63,7 @@
       <br>
       <!-- Start Page content -->
       <div id="DnDTimeAjaxObject">
-        <div id="welcome" style="margin-right: 7%; margin-left: 7%;">
+        <div style="margin-right: 7%; margin-left: 7%;">
           <div class="HeadFont">
             Welcome to Pete and Jeremy's DnDTime
           </div>
