--- a/index_v2.html
+++ b/index_v2.html
@@ -48,9 +48,9 @@
       <!-- Title Area & Audio Player -->
       <br>
       <br>
-      <div class="TitleFont">
-        PETE AND JEREMY'S DNDTIME
-      </div>
+      <p class="TitleFont">PETE AND JEREMY'S DNDTIME</p>
+      <br>
+      <br>
       <p style="text-align: center; font-size: 10px">
         Pete and Jeremy's DnDTime Theme Song
         <br>
