--- a/index_v2.html
+++ b/index_v2.html
@@ -46,14 +46,14 @@
         <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
       </div>
       <!-- Title Area & Audio Player -->
-      <p class="TitleFont">PETE AND JEREMY'S DNDTIME</p>
-      <p style="text-align: center; font-size: 10px">
+      <div class="TitleFont">PETE AND JEREMY'S DNDTIME</div>
+      <div style="text-align: center; font-size: 10px">
         Pete and Jeremy's DnDTime Theme Song
         <br>
         <audio controls="" id="audioplayer">
           <source src="/Music/Pete%20and%20Jeremy's%20DnDTime%20Theme%20Song.mp3" type="audio/mp3">
         </audio>
-      </p>
+      </div>
       <br>
       <br>
       <!-- Start Page content -->
