--- a/index_v2.html
+++ b/index_v2.html
@@ -46,7 +46,9 @@
         <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
       </div>
       <!-- Title Area & Audio Player -->
-      <div class="TitleFont">PETE AND JEREMY'S DNDTIME</div>
+      <br>
+      <br>
+      <div style="line-height: 80%;" class="TitleFont">PETE AND JEREMY'S DNDTIME</div>
       <div style="text-align: center; font-size: 10px">
         Pete and Jeremy's DnDTime Theme Song
         <br>
