--- a/index_v2.html
+++ b/index_v2.html
@@ -46,9 +46,11 @@
         <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
       </div>
       <!-- Title Area & Audio Player -->
+      <div style="line-height: 80%;" class="TitleFont">
       <br>
       <br>
-      <div style="line-height: 80%;" class="TitleFont">PETE AND JEREMY'S DNDTIME</div>
+      PETE AND JEREMY'S DNDTIME
+      </div>
       <br>
       <div style="text-align: center; font-size: 10px">
         Pete and Jeremy's DnDTime Theme Song
