--- a/index_v2.html
+++ b/index_v2.html
@@ -17,8 +17,8 @@
         <div class="w3-bar w3-black w3-card">
           <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
           <a class="w3-bar-item w3-button w3-padding-large" href="#welcome" onclick="setTimeout(loadContent, 200);">Welcome</a>
-          <a class="w3-bar-item w3-button w3-padding-large" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
-          <a class="w3-bar-item w3-button w3-padding-large" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
+          <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up To Play</a>
+          <a class="w3-bar-item w3-button w3-padding-large w3-hide-small" href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
           <div class="w3-dropdown-hover w3-hide-small">
             <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
