--- a/index_v2.html
+++ b/index_v2.html
@@ -45,7 +45,7 @@
         <a class="w3-bar-item w3-button w3-padding-large" href="#faq" onclick="setTimeout(loadContent, 200);">Frequently Asked Questions</a>
       </div>
       <!-- Title Area & Audio Player -->
-      <div style="line-height: 75%;" class="TitleFont">
+      <div style="line-height: 100%; margin-top: 46px;" class="TitleFont">
       <br>
       PETE AND JEREMY'S DNDTIME
       </div>
