--- a/Campaigns/Squad/Twig.html
+++ b/Campaigns/Squad/Twig.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <link rel="stylesheet" href="https://static.5etools.com/css/style.css?v=1.31.0">
 
 <div style="width:550px">
@@ -35,3 +37,4 @@
 				</tr>
 			</tbody></table>
 			</div>
+</html>
