--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </div>
       <br>
       <!-- Start Page content -->
-      <div id="DnDTimeAjaxObject">
-        <div style="margin-right: 7%; margin-left: 7%;">
+      <div id="DnDTimeAjaxObject" style="margin-right: 7%; margin-left: 7%;">
+        <div>
           <div class="HeadFont">
             Welcome to Pete and Jeremy's DnDTime
           </div>
