--- a/misc/squad/secundus-statblock.html
+++ b/misc/squad/secundus-statblock.html
@@ -372,8 +372,8 @@
 				})(window, document);
 			</script>
 		</templates>
-		<stat-block id="ONE COLUMN">
-<!--	<stat-block data-content-height="672" data-two-column="" id="TWO COLUMNS"> -->
+<!--		<stat-block id="ONE COLUMN"> -->
+		<stat-block data-content-height="672" data-two-column="" id="TWO COLUMNS">
 			<creature-heading>
 				<h1>Secundus, the Rogue Modron</h1>
 				<h2>Medium construct (modron), chaotic neutral</h2>
